--- a/configuration/templates/volunteering/groups.hbs
+++ b/configuration/templates/volunteering/groups.hbs
@@ -27,7 +27,9 @@
         <div class="card">
           <div class="card-header">
             <div class="card-title h5">
-              <a href="/hours/{{task_id}}/{{slugify organisation_name}}">{{organisation_name}}</a>
+
+              <a href="/{{#if @root.data.isAdmin}}admin-group{{else}}hours{{/if}}/{{task_id}}/{{slugify organisation_name}}">{{organisation_name}}</a>
+
             </div>
             {{#if task_description ~}}
             <div class="card-subtitle text-gray">{{truncate task_description 140}}</div>
@@ -58,7 +60,7 @@
             </ul>
           </div>
           <div class="card-footer">
-            <a href="/hours/{{task_id}}/{{slugify organisation_name}}" class="btn btn-link">Manage group</a>
+            <a href="/{{#if @root.data.isAdmin}}admin-group{{else}}hours{{/if}}/{{task_id}}/{{slugify organisation_name}}" class="btn btn-link">Manage group</a>
           </div>
         </div>
       </div>
