--- a/configuration/templates/volunteering/hours.hbs
+++ b/configuration/templates/volunteering/hours.hbs
@@ -162,314 +162,6 @@
     {{/unless ~}}
     {{else}}
 
-    {{#if @root.request.params.task_id ~}}
-    {{#each @root.data.tasksInfo ~}}
-    {{#compare task_id @root.request.params.task_id ~}}
-    <div class="task task-{{task_id}}">
-      <div class="columns">
-        <div class="column col-9 col-lg-12 col-xl-11">
-          <h2 class="no-margin">
-            {{{organisation_name}}}
-          </h2>
-        </div>
-      </div>
-
-      <div id="{{this.task_id}}-details" class="b-margin-full">
-        {{#ifAny task_description location un_sustainable_development_goals ~}}
-        <div class="columns">
-          <div class="column col-9 col-lg-12 col-xl-11">
-            {{#if task_description ~}}
-            <p>
-              {{{task_description}}}
-            </p>
-            {{/if ~}}
-            <ul class="fa-ul hours-info">
-              {{#if location ~}}
-              <li class="card-subtitle">
-                <span class="fa-li"><span class="far fa-map-marker-alt"></span></span>
-                <span class="text-gray">{{truncate location 140}}</span>
-              </li>
-              {{/if ~}}
-              {{#if un_sustainable_development_goals ~}}
-              <li class="card-subtitle">
-                <span class="fa-li"><span class="far fa-globe"></span></span>
-                <span class="text-gray">{{> sdg_label sdg=un_sustainable_development_goals}}</span>
-              </li>
-              {{/if ~}}
-              {{#compare (length hours_list) ">" 0 ~}}
-              <li class="card-subtitle">
-                <span class="fa-li"><span class="fas fa-file-csv"></span></span>
-                <a href="/task-csv/{{task_id}}/{{slugify organisation_name}}-volunteers.csv" title="Download a CSV file of names, certificate types, and claim codes" download>Download participant details</a>
-              </li>
-              {{/compare ~}}
-            </ul>
-          </div>
-        </div>
-        {{/ifAny ~}}
-
-        <div class="divider v-margin-full"></div>
-
-        <h3>
-          Participants
-        </h3>
-
-        {{#compare (length hours_list) ">" 0 ~}}
-        <div class="columns">
-          <div class="column col-4 hide-xl">
-            <strong>Volunteer name</strong>
-          </div>
-          <div class="column col-3 hide-xl">
-            <strong>Certificate</strong>
-          </div>
-          <div class="column col-2 hide-xl">
-            <strong>Claim code</strong>
-          </div>
-          <div class="column col-1 hide-xl"></div>
-          <div class="column col-2 col-xl-3 col-lg-4 col-md-6 col-sm-8 col-xs-9">
-            <a href="/group-certificate/{{task_id}}" class="btn btn-primary btn-block b-margin">Download all</a>
-          </div>
-        </div>
-        {{#each hours_list ~}}
-        {{#ifAny claim_first_name claim_code ~}}
-        {{!-- <form id="{{hours_id}}" method="POST" action="/admin-update-individual-hours?user_id={{@root.data.auth.uid}}" style="position:relative" class="inline-hours-form" data-component="TasksTrigger" data-form-element=">" data-success-message="Participant details updated" data-TasksTrigger="ajax-form-handler">
-          <input type="hidden" name="task_id" value="{{../task_id}}">
-          <input type="hidden" name="verified" value="{{verified}}">
-          <input type="hidden" name="claim_code" value="{{claim_code}}">
-          <input type="hidden" name="hours_id" value="{{hours_id}}">
-          <input type="hidden" name="user_id" value="{{@root.data.auth.uid}}"> --}}
-
-          <div class="columns">
-            <div class="column col-2 col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-6">
-              <div class="form-group b-margin">
-                {{!-- <input {{#unless claim_code}}disabled{{/unless}} class="form-input inline-edit" name="claim_first_name" value="{{{claim_first_name}}}"> --}}
-                {{{claim_first_name}}}
-              </div>
-            </div>
-            <div class="column col-2 col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-6">
-              <div class="form-group b-margin">
-                {{!-- <input {{#unless claim_code}}disabled{{/unless}} class="form-input inline-edit" name="claim_last_name" value="{{{claim_last_name}}}"> --}}
-                {{{claim_last_name}}}
-              </div>
-            </div>
-            <div class="column col-3 col-xl-4 col-lg-4 col-md-4 col-sm-6 col-xs-7">
-              <div class="form-group b-margin">
-                {{!-- <select class="form-select hours"{{#unless claim_code}} disabled{{/unless}} required name="hours" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.hours}}>
-                  {{#each @root.context.metaData.certificates ~}}
-                  {{#unless tsi_only ~}}
-                  <option value="{{hours}}"{{#compare hours ../hours}} selected{{/compare}}>
-                    {{#ifAny (compare type "approach") (compare type "ascent") ~}}
-                    {{type_name}}: {{hours}} hours
-                    {{else}}
-                    {{type_name}}
-                    {{/ifAny ~}}
-                  </option>
-                  {{else}}
-                  {{#if @root.data.accountInfo.summit_certificate_permission ~}}
-                  <option value="{{hours}}"{{#compare hours ../hours}} selected{{/compare}}>
-                    {{type_name}}
-                  </option>
-                  {{/if ~}}
-                  {{/unless ~}}
-                  {{/each ~}}
-                </select> --}}
-                {{#each @root.context.metaData.certificates ~}}
-                {{#unless tsi_only ~}}
-                {{#compare hours ../hours ~}}
-                {{#ifAny (compare type "approach") (compare type "ascent") ~}}
-                {{type_name}}: {{hours}} hours
-                {{else}}
-                {{type_name}}
-                {{/ifAny ~}}
-                {{/compare ~}}
-                {{/unless ~}}
-                {{/each ~}}
-              </div>
-            </div>
-            <div class="column col-2 col-xl-3 col-lg-2 col-md-3 col-sm-6 col-xs-5">
-              {{#unless (ifAll claim_code (compare hours '!==' 0) (compare hours '!==' 1)) ~}}
-              Claimed!
-              {{else}}
-              <mark class="claim-code">{{substr claim_code 0 10}}</mark>
-              {{/unless ~}}
-            </div>
-            <div class="column col-1 col-xl-2 col-lg-2 col-md-3 col-sm-4">
-              {{!-- {{#if claim_code ~}}
-              <button type="submit" class="btn btn-success btn-block inline-update-button b-margin" style="display:none;">Save</button>
-              {{/if ~}} --}}
-              {{#if (ifAll claim_code (compare hours '!==' 0) (compare hours '!==' 1)) ~}}
-              <button type="button" class="btn btn-block edit-button b-margin">Edit</button>
-              <div class="modal modal-sm" id="{{hours_id}}">
-                <a href="#close" class="modal-overlay modal-close" aria-label="Close"></a>
-                <div class="modal-container">
-                  <div class="modal-header">
-                    <a href="#close" class="btn btn-clear modal-close float-right" aria-label="Close"></a>
-                    <div class="modal-title h5">{{{claim_first_name}}} {{{claim_last_name}}}</div>
-                  </div>
-                  <div class="modal-body">
-                    <div class="content">
-                      <form id="{{hours_id}}" method="POST" action="/admin-update-individual-hours?user_id={{@root.data.auth.uid}}" style="position:relative" class="inline-hours-form" data-component="TasksTrigger" data-form-element=">" data-success-message="Participant details updated" data-TasksTrigger="ajax-form-handler">
-                        <input type="hidden" name="task_id" value="{{../task_id}}">
-                        <input type="hidden" name="verified" value="{{verified}}">
-                        <input type="hidden" name="claim_code" value="{{claim_code}}">
-                        <input type="hidden" name="hours_id" value="{{hours_id}}">
-                        <input type="hidden" name="user_id" value="{{@root.data.auth.uid}}">
-
-                        <div class="form-group b-margin">
-                          <input {{#unless (ifAll claim_code (compare hours '!==' 0) (compare hours '!==' 1)) ~}}disabled{{/unless}} class="form-input inline-edit" name="claim_first_name" value="{{{claim_first_name}}}">
-                        </div>
-                        <div class="form-group b-margin">
-                          <input {{#unless (ifAll claim_code (compare hours '!==' 0) (compare hours '!==' 1)) ~}}disabled{{/unless}} class="form-input inline-edit" name="claim_last_name" value="{{{claim_last_name}}}">
-                        </div>
-                        <div class="form-group b-margin">
-                          <select class="form-select hours" {{#unless (ifAll claim_code (compare hours '!==' 0) (compare hours '!==' 1)) ~}}disabled{{/unless}} required name="hours" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.hours}}>
-                            {{#each @root.context.metaData.certificates ~}}
-                            {{#unless tsi_only ~}}
-                            <option value="{{hours}}"{{#compare hours ../hours}} selected{{/compare}}>
-                              {{#ifAny (compare type "approach") (compare type "ascent") ~}}
-                              {{type_name}}: {{hours}} hours
-                              {{else}}
-                              {{type_name}}
-                              {{/ifAny ~}}
-                            </option>
-                            {{else}}
-                            {{#if @root.data.accountInfo.summit_certificate_permission ~}}
-                            <option value="{{hours}}"{{#compare hours ../hours}} selected{{/compare}}>
-                              {{type_name}}
-                            </option>
-                            {{/if ~}}
-                            {{/unless ~}}
-                            {{/each ~}}
-                          </select>
-                        </div>
-                        <div class="form-group">
-                          <textarea {{#unless (ifAll claim_code (compare hours '!==' 0) (compare hours '!==' 1)) ~}}disabled{{/unless}} rows="3" placeholder="Description" cols="40" id="description_override" name="description_override" class="form-input" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.task_description}}>{{{../task_description}}}</textarea>
-                        </div>
-                      </form>
-                    </div>
-                  </div>
-                  <div class="modal-footer">
-                    {{#if (ifAll claim_code (compare hours '!==' 0) (compare hours '!==' 1)) ~}}
-                    <button type="submit" class="btn btn-success btn-block inline-update-button b-margin">Save</button>
-                    <a href="/admin-delete-hours?hours_id={{hours_id}}&user_id={{@root.data.auth.uid}}" class="btn btn-error btn-block b-margin" data-component="TasksTrigger" data-success-hide="true" data-TasksTrigger="ajax-delete-handler">Remove</a>
-                    {{/if ~}}
-                  </div>
-                </div>
-              </div>
-              {{/if ~}}
-            </div>
-            <div class="column col-2 col-xl-2 col-lg-2 col-md-3 col-sm-4">
-              <a href="/group-certificate/{{../task_id}}/{{hours_id}}/saltire-award-{{#compare hours 0}}challenge-certificate{{else}}{{#compare hours 1}}summit-certificate{{else}}for-{{hours}}-hours{{/compare}}{{/compare}}-{{slugify claim_first_name}}-{{slugify claim_last_name}}.pdf" class="btn btn-block b-margin">Download</a>
-            </div>
-            {{!-- <div class="column col-1 col-xl-2 col-lg-2 col-md-3 col-sm-4">
-              {{#if claim_code ~}}
-              <a href="/admin-delete-hours?hours_id={{hours_id}}&user_id={{@root.data.auth.uid}}" class="btn btn-error btn-block b-margin" data-component="TasksTrigger" data-success-hide="true" data-TasksTrigger="ajax-delete-handler">Remove</a>
-              {{/if ~}}
-            </div> --}}
-          </div>
-        {{!-- </form> --}}
-
-        {{/ifAny ~}}
-        {{/each ~}}
-
-        <form action="/update-task-testimonial/{{task_id}}?user_id={{@root.data.auth.uid}}" class="form-horizontal inline-hours-form" data-component="TasksTrigger" data-form-element=">" data-success-message="Testimonial updated" data-TasksTrigger="ajax-form-handler">
-          <div class="form-group">
-            <div class="col-4">
-              <label for="testimonial" class="form-label">
-                Group testimonial
-              </label>
-            </div>
-            <div class="column col-7">
-              <div class="columns">
-                <div class="col-8">
-                  <textarea rows="3" placeholder="Let people know what your volunteers have achieved" cols="40" id="testimonial" name="testimonial" class="form-input" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.testimonial}}>{{testimonial}}</textarea>
-                </div>
-                <div class="col-1"></div>
-                <div class="col-3">
-                  <button type="submit" class="btn btn-success btn-block inline-update-button b-margin" style="display: none">Save</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </form>
-
-        <form action="/do-not-act/{{task_id}}?user_id={{@root.data.auth.uid}}" class="form-horizontal inline-hours-form" data-component="TasksTrigger" data-form-element=">" data-success-message="Skills updated" data-TasksTrigger="ajax-form-handler">
-          <div class="form-group">
-            <div class="col-4">
-              <label for="skills" class="form-label">
-                Skills developed
-              </label>
-            </div>
-            <div class="column col-7">
-              <div class="columns">
-                <div class="col-8">
-                  <textarea rows="3" placeholder="What skills were used (NOT DEVELOPED YET)" disabled cols="40" id="skills" name="skills" class="form-input" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.skills}}>{{skills}}</textarea>
-                </div>
-                <div class="col-1"></div>
-                <div class="col-3">
-                  <button type="submit" class="btn btn-success btn-block inline-update-button b-margin" style="display: none">Save</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </form>
-      </div>
-      <a href="#" class="btn btn-primary show-group-hours-form">
-        Add more participants
-      </a>
-      {{/compare ~}}
-
-      <form action="/admin-submit-group-hours" id="group-hours-form" method="POST" data-component="TasksTrigger" {{#if @root.data.isAdmin}}data-success-destination="/hours/{{task_id}}/{{slugify organisation_name}}" data-destination-include-id="false"{{else}}data-success-destination="/hours"{{/if}} data-TasksTrigger="ajax-form-handler"{{#compare (length hours_list) '>' 0}} style="display:none;"{{/compare}}>
-        <div class="form-horizontal">
-          <input type="hidden" name="task_id" value="{{task_id}}">
-          <div class="form-group">
-            <div class="col-4">Participant names</div>
-            <div class="col-5">
-              <textarea rows="6" cols="40" id="volunteers" pattern=".*\S.*" name="volunteers" class="form-input" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.task_description}}>{{@root.data.taskInfo.task_description}}</textarea>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-4">
-              <label for="hours" class="form-label">
-                Certificate to award
-              </label>
-            </div>
-            <div class="col-2">
-              <div class="form-group b-margin">
-                <select class="form-select" required id="hours" name="hours" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.hours}}>
-                  {{#each @root.context.metaData.certificates ~}}
-                  {{#unless tsi_only ~}}
-                  <option value="{{hours}}"{{#compare hours ../hours}} selected{{/compare}}>
-                    {{#ifAny (compare type "approach") (compare type "ascent") ~}}
-                    {{type_name}}: {{hours}} hours
-                    {{else}}
-                    {{type_name}}
-                    {{/ifAny ~}}
-                  </option>
-                  {{else}}
-                  <option value="{{hours}}"{{#unless @root.data.accountInfo.summit_certificate_permission}} disabled{{/unless}}>
-                    {{type_name}}
-                  </option>
-                  {{/unless ~}}
-                  {{/each ~}}
-                </select>
-              </div>
-            </div>
-          </div>
-          <div class="form-group">
-            <div class="col-4"></div>
-            <div class="col-2">
-              <button id="detail-submit" type="submit" class="btn btn-primary b-margin-full" id="group-hours-submit">
-                Submit details
-              </button>
-            </div>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-  {{/compare ~}}
-  {{/each ~}}
-  {{/if ~}}
   {{/unless ~}}
   {{!-- This will probably have a captcha in it, hence the separation, and weird submit format --}}
 </div>
@@ -519,9 +211,9 @@ document.addEventListener("DOMContentLoaded", function(event) {
     var submit = $(this).closest('form').hide();
   });
 
-  $('.show-group-hours-form').click(function(e){
+  $('.show-group-awards-form').click(function(e){
     e.preventDefault();
-    $('#group-hours-form').show();
+    $('#group-awards-form').show();
     $(this).hide();
   });
 
