more changes, testimonials now set at the start, like task descriptions.

--- a/configuration/templates/admin/group-award-edit-body.hbs
+++ b/configuration/templates/admin/group-award-edit-body.hbs
@@ -16,7 +16,8 @@
       {{{json key='claim_code' value=claim_code}}},
       {{{json key='un_sustainable_development_goals' value=un_sustainable_development_goals}}},
       {{{json key='description_1' value=description_1}}},
-      {{{json key='organisation_name_1' value=organisation_1}}}
+      {{{json key='organisation_name_1' value=organisation_name_1}}},
+      {{{json key='testimonial_1' value=testimonial_1}}}
     {{/json}}
   {{/json}}
 {{/with}}
