--- a/configuration/templates/volunteering/task-body-submit.hbs
+++ b/configuration/templates/volunteering/task-body-submit.hbs
@@ -11,6 +11,7 @@
       {{{json key='volunteer_manager_last_name' value=volunteer_manager_last_name }}},
       {{{json key='volunteer_manager_phone' value=volunteer_manager_phone }}},
       {{{json key='volunteer_manager_title' value=volunteer_manager_title }}},
+      {{{json key='testimonial' value=testimonial}}},
       {{{json key='task_type' value=task_type}}}
     {{/json}}
   {{/json}}
