--- a/configuration/templates/volunteering/task.hbs
+++ b/configuration/templates/volunteering/task.hbs
@@ -94,10 +94,10 @@
               <label for="task_description" class="form-label">
               {{#unless @root.data.isAdmin ~}}
                 Tell us about what you have been doing
-                  <div class="caption">Note: This may be shown on your certificate</div>
+                  <div class="caption">(This may be changed on individual awards)</div>
               {{else}}
                 Tell us about what your volunteers have been doing
-                <div class="caption">Note: This may be shown on their certificates</div>
+                <div class="caption">(This may be changed on individual awards)</div>
               {{/unless}}
                 </label>
             </div>
