hopefully working awards adaptation.

--- a/configuration/partials/log-action-buttons.hbs
+++ b/configuration/partials/log-action-buttons.hbs
@@ -6,7 +6,7 @@
   </a>
   {{/unless ~}}
   {{#unless (compare (sumArray (pluck @root.data.tasksInfo "hours")) 0) ~}}
-  <a href="/claim-hours" class="btn">
+  <a href="/claim-award" class="btn">
     Claim hours with code
   </a>
   {{/unless ~}}
