--- a/configuration/partials/log-empty.hbs
+++ b/configuration/partials/log-empty.hbs
@@ -14,7 +14,7 @@
   </div>
   {{#unless @root.data.isAdmin ~}}
   <p class="empty-subtitle">
-    Already received a certificate from a group? <a href="/claim-hours">Add the certificate</a> to this account with the claim code.
+    Already received a certificate from a group? <a href="/claim-award">Add the certificate</a> to this account with the claim code.
   </p>
   {{/unless ~}}
 </div>
