--- a/configuration/partials/emails/hours-verify-complete-subject.hbs
+++ b/configuration/partials/emails/hours-verify-complete-subject.hbs
@@ -1,1 +1,1 @@
-Congratulations on achieving your Saltire {{@root.data.accountInfo.hours_verify_award}} Hours Award!
+Congratulations on achieving your Saltire {{@root.request.body.award}}{{#if (regexMatch @root.request.body.award '[0-9]+')}} Hours{{/if}} Award!
