--- a/configuration/partials/emails/hours-verify-complete-body.html
+++ b/configuration/partials/emails/hours-verify-complete-body.html
@@ -177,7 +177,7 @@
                                         <div style="font-family:Montserrat, Helvetica, Arial, sans-serif;font-size:16px;line-height:20px;text-align:left;color:#000000;">
                                           <p><strong>This is a test from the new Saltire Awards service in development</strong></p>
                                           <p>Dear {{@root.data.accountInfo.first_name}},</p>
-                                          <p> Congratulations! You have been awarded your Saltire {{@root.request.body.award}}{{#if (regexMatch @root.request.body.award '[0-9]+')}} Hours{{/if}} Award! </p>
+                                          <p> Congratulations! You have been awarded your Saltire {{@root.request.body.award}}{{#if (regexMatch @root.request.body.award '[0-9]+' 'gi')}} Hours{{/if}} Award! </p>
                                           <p> Please <a href="{{@root.context.metaData.url}}/awards">visit the Saltire Awards site</a> to view, download or print it. </p>
                                           {{#if @root.data.ysCode}}
                                             <p>To recognise all your hard work you have earned {{@root.context.metaData.youngScotSettings.points-per-certificate}} Young Scot Rewards points. You can use your points to access some amazing opportunities through Rewards ranging from behind the scenes experiences, work shadowing opportunities, tickets for events and so much more!</p>
