--- a/configuration/templates/volunteering/email/request-printed-certificate.hbs
+++ b/configuration/templates/volunteering/email/request-printed-certificate.hbs
@@ -3,7 +3,7 @@
 "from": "{{@root.context.metaData.title}} <{{@root.context.metaData.contacts.noreply}}>",
 "h:sender": "{{@root.context.metaData.title}} <{{@root.context.metaData.contacts.noreply}}>",
 "h:Reply-To": "{{>support_name}} <{{>support_email_address}}>",
-"to": "{{@root.data.accountInfo.tsi_contact_email}}",
+"to": "anuttgens@gmail.com",
 "o:tag": "tsi_certificate_request",
 "o:tracking": true,
 "tag":  "tsi_certificate_request",
